Product seach  api spec
